k8s/d20/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d20-dice-roller
spec:
  template:
    spec:
      containers:
      - name: d20-dice-roller
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
